# relevanceai

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: outrider-daily.yml  outrider.yml
.remyx/: repo_intel.yaml
examples/: approve_tasks_in_bulk.py  get_api_definition.py  mass_approve_tasks.py  rerun_pending_tasks.py  trigger_and_poll_tasks.py  trigger_templated_tasks.py
relevanceai/: __init__.py  _base_client.py  _client.py  _resource.py  workflows.py
relevanceai/resources/: __init__.py  agent.py  agents.py  knowledge.py  oauth.py  tasks.py  tool.py  tools.py
tests/: test_client.py  test_workflows.py
tests/resources/: test_agent.py  test_agents.py  test_tasks.py  test_tool.py  test_tools.py
